fix header spacing

--- a/src/pages/work/work.css
+++ b/src/pages/work/work.css
@@ -30,7 +30,7 @@
     margin-top: -6%;
     background-color: #22303a;
     box-shadow: 0 15px 20px -10px rgba(0, 0, 0, 0.25);
-    margin-bottom: 3vw;
+    margin-bottom: 4vw;
     overflow: hidden;
 }
 
@@ -39,7 +39,8 @@
     display: block;
     position: relative;
     z-index: 2;
-    margin-top: -21vw;
+    margin-top: -20vw;
+   margin-bottom: -0.3vw;
 
 }
 
